--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,7 @@ $mi-gruen: #00AD2F;
 $mi-lila: #9313ce;
 $mi-black: #231f20;
 $mi-grau: #aaaaaa;
+$mi-bg: #efefef;
 $family-primary: "PT Sans";
 $primary: $mi-pink;
 $info: $mi-lila;
