--- a/_includes/partials/menu-items.html
+++ b/_includes/partials/menu-items.html
@@ -3,5 +3,6 @@
 <li><a href="{{ site.baseurl }}/web-technologien/" class="nav-item">Web Technologien</a></li>
 <!--li><a href="{{ site.baseurl }}/links/" class="nav-item">Links</a></li>
 <li><a href="{{ site.baseurl }}/faq/" class="nav-item">FAQ</a></li-->
+<li><a href="{{ site.baseurl }}/formate/" class="nav-item">Formate</a></li-->
 <li><a href="https://github.com/th-koeln/mi-master-wtw/issues/new" class="nav-item">Frage stellen</a></li>
 <li><a href="https://github.com/th-koeln/mi-master-wtw/wiki" class="nav-item">WTW Wiki</a></li>
