--- a/_layouts/page-einspalter.html
+++ b/_layouts/page-einspalter.html
@@ -1,15 +1,20 @@
----
-layout: default
+--- 
+layout: default 
 ---
 
 <section class="section">
-	
+
 	<div class="container">
 		<div class="content">
 			<div class="columns">
-				<div class="column is-8"><h1>{{ page.titel }}</h1></div>
+				<div class="column is-8">
+					<h1>{{ page.titel }}</h1>
+				</div>
 				<div class="column is-4 has-text-right">
-					<a target="_blank" href="https://github.com/th-koeln/mi-bachelor-gdvk/edit/master/{{ page.path }}"><span class="icon"><i class="fa fa-edit"></i></span> Bearbeiten</a>
+					<a target="_blank" href="https://github.com/th-koeln/mi-master-wtw/edit/master/{{ page.path }}">
+						<span class="icon">
+							<i class="fa fa-edit"></i>
+						</span> Bearbeiten</a>
 				</div>
 			</div>
 		</div>
@@ -17,7 +22,7 @@ layout: default
 
 	<div class="container">
 		<div class="content">
-		{{ content }}
-  		</div>
+			{{ content }}
+		</div>
 	</div>
 </section>
