Veranstaltungsplan WT 2019 aktualisiert.

--- a/_includes/workshop-overview.html
+++ b/_includes/workshop-overview.html
@@ -8,8 +8,8 @@
       <a href="{{site.baseurl}}{{workshop.url}}">
       <div class="card bm--card-equal-height">
         <div class="card-image">
-          <figure class="image is-2by1">
-            <img src="{{ workshop.bild | prepend: workshop.url | replace: 'index/' | prepend: site.baseurl }}">
+          <figure class="image is-16by9">
+            <img src="{{ workshop.bild | prepend: workshop.url | prepend: site.baseurl }}">
           </figure>
         </div>
         <div class="card-content">
