--- a/_includes/partials/menu-items.html
+++ b/_includes/partials/menu-items.html
@@ -1,8 +1,8 @@
-<!--li><a href="{{ site.baseurl }}/angebote/" class="nav-item">Veranstaltungen</a--></li>
-<li><a href="{{ site.baseurl }}/timetable-sose-2018/" class="nav-item">Zeitplan SoSe 2018</a></li>
+<!--li><a href="{{ site.baseurl }}/angebote/" class="nav-item">Veranstaltungen</a></li-->
+<li><a href="{{ site.baseurl }}/timetable-sose-2019/" class="nav-item">Zeitplan SoSe 2019</a></li>
 <li><a href="{{ site.baseurl }}/web-technologien/" class="nav-item">Web Technologien</a></li>
 <!--li><a href="{{ site.baseurl }}/links/" class="nav-item">Links</a></li>
 <li><a href="{{ site.baseurl }}/faq/" class="nav-item">FAQ</a></li-->
-<li><a href="{{ site.baseurl }}/formate/" class="nav-item">Formate</a></li-->
+<li><a href="{{ site.baseurl }}/formate/" class="nav-item">Formate</a></li>
 <li><a href="https://github.com/th-koeln/mi-master-wtw/issues/new" class="nav-item">Frage stellen</a></li>
 <li><a href="https://github.com/th-koeln/mi-master-wtw/wiki" class="nav-item">WTW Wiki</a></li>
