Basisversion Git Api integration

--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -16,4 +16,5 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.8.3/showdown.min.js"></script>
-<script src="{{ site.baseurl }}/mi-2017.js"></script>
+<script src="{{ site.baseurl }}/assets/libs/octokit-rest.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/mi-2017.js"></script>
