implement ics on site generation add button on calender to download ical

--- a/_includes/timetable-day.html
+++ b/_includes/timetable-day.html
@@ -17,6 +17,12 @@
 
 <!--div class="column"-->
 	<h3 class="datum is-3 title">{{day.name}}, {{day.datum | date: '%d. %B %Y'  | replace:"January","Januar" | replace:"Februar","February" | replace:"March","März" | replace:"May","Mai" | replace:"June","Juni" | replace:"July","Juli" | replace:"December","Dezember" | replace:"October","Oktober" }}</h3>
+
+	<script>
+		//dataObject = {}
+		//datenLehrveranstaltungen.push(dataObject)
+		//console.log(Date())
+	</script>
 	<div class="timetable-wrap">
 		
 		{% for i in (0..difftime) %}
@@ -83,6 +89,9 @@
 								{% endif %}
 								{% include /functions/resolve-names.html verantwortlich=verantwortlich %}
 								<p class="title"><span class="is-hidden-tablet">{{termin | date: '%d. %B %Y, %H:%M Uhr'}}: </span>{{veranstaltung.titel}}</p>
+								<script>
+									cal.addEvent("{{veranstaltung.titel}}","Web-Technologien", "{{veranstaltung.raum}}", "{{termin}}", "{{termin}}");
+								</script>
 
 								{% if (veranstaltung.raum | append: "") != "" %}
 								{% assign raumnummer = veranstaltung.raum | append: "" %}
