--- a/assets/styles/mi-master-wtw.scss
+++ b/assets/styles/mi-master-wtw.scss
@@ -16,6 +16,15 @@
 
 .button {
     font-size: $bfs;
+    background-color: $mi-pink;
+    color: $mi-bg;
+    font-weight: bold;
+    position: absolute;
+    margin-left: 5px;
+    padding: 1px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 10px;
 }
 
 body,
