Termine SS2020 gemacht

--- a/_includes/partials/menu-items.html
+++ b/_includes/partials/menu-items.html
@@ -1,5 +1,5 @@
 <!--li><a href="{{ site.baseurl }}/angebote/" class="nav-item">Veranstaltungen</a></li-->
-<li><a href="{{ site.baseurl }}/timetable-sose-2019/" class="nav-item">Zeitplan SoSe 2019</a></li>
+<li><a href="{{ site.baseurl }}/timetable/" class="nav-item">Zeitplan</a></li>
 <li><a href="{{ site.baseurl }}/web-technologien/" class="nav-item">Web Technologien</a></li>
 <!--li><a href="{{ site.baseurl }}/links/" class="nav-item">Links</a></li>
 <li><a href="{{ site.baseurl }}/faq/" class="nav-item">FAQ</a></li-->
