--- a/_includes/workshop-overview.html
+++ b/_includes/workshop-overview.html
@@ -19,7 +19,7 @@
               <dd>{{workshop.autor}}</dd>
               <dd>{{workshop.termin}}</dd>
               <dd>{{workshop.dauer}}</dd>
-              <dd>Raum {{workshop.raum}}</dd>
+              <dd class="clipped-text">Raum {{workshop.raum}}</dd>
             </dt>
           </div>
         </div>
