--- a/assets/styles/mi-master-wtw.scss
+++ b/assets/styles/mi-master-wtw.scss
@@ -186,6 +186,7 @@ $tt-grid-height: 60px;
         color: #fff;
         font-size: 0.9rem;
         line-height: 110%;
+        margin-bottom: $bfs/4;
       }
 
       .title+.subtitle {
