--- a/_includes/partials/menu-items.html
+++ b/_includes/partials/menu-items.html
@@ -4,5 +4,4 @@
 <!--li><a href="{{ site.baseurl }}/links/" class="nav-item">Links</a></li>
 <li><a href="{{ site.baseurl }}/faq/" class="nav-item">FAQ</a></li-->
 <li><a href="{{ site.baseurl }}/formate/" class="nav-item">Formate</a></li>
-<li><a href="https://github.com/th-koeln/mi-master-wtw/issues/new" class="nav-item">Frage stellen</a></li>
-<li><a href="https://github.com/th-koeln/mi-master-wtw/wiki" class="nav-item">WTW Wiki</a></li>
+<li><a href="{{ site.baseurl }}/projekte/" class="nav-item">Projekte</a></li>
