--- a/assets/styles/mi-master-wtw.scss
+++ b/assets/styles/mi-master-wtw.scss
@@ -1,4 +1,4 @@
----
+--- 
 --- 
 //
 // IMPORTS
@@ -6,11 +6,14 @@
 @import "variables";
 @import "bulma";
 @import "overrides";
-
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
+
+
 /* BASE RULES */
+
+
 /**************/
 
 .button {
@@ -31,7 +34,6 @@ html {
   line-height: 130%;
 }
 
-
 .is-underlined {
   padding-bottom: $bfs /2;
   margin-bottom: $bfs *2 !important;
@@ -40,46 +42,51 @@ html {
 }
 
 
-
-
 /**************/
+
+
 /* index     */
+
+
 /**************/
 
 
 /**************/
+
+
 /* Footer     */
+
+
 /**************/
 
 .footer {
   border-top: solid 1px $mi-pink;
-
   .menu-list {
     li+li {
       border-top: solid 1px rgba(0, 0, 0, 0.2);
     }
-
     a {
       padding-left: 0;
       font-size: $bfs * 0.8;
     }
   }
-
 }
 
 
 /**************/
+
+
 /* Header  */
+
+
 /**************/
 
 .is-header {
-
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   overflow: hidden;
   position: relative;
-
   &.has-gradient::before {
     content: '';
     top: 0;
@@ -94,7 +101,6 @@ html {
     opacity: 1;
     z-index: 0;
   }
-
   .title {
     font-weight: 100;
     font-size: $bfs * 2;
@@ -103,84 +109,72 @@ html {
 
 
 /**************/
+
+
 /* Timetable  */
+
+
 /**************/
 
 $tt-grid-height: 60px;
-
 .timetable {
   .datum {
     height: $tt-grid-height;
-
     @media (max-width: 999px) {
       height: auto !important;
     }
   }
-
   @media (max-width: 999px) {
     .datum:nth-of-type(2) {
       margin-top: $bfs *2;
     }
-
     h2 {
       border-bottom: $dotted-line;
       padding-bottom: $bfs /4;
       padding-top: $bfs *2;
     }
   }
-
   .timetable-wrap {
     position: relative;
-
     .timetable-grid {
       height: $tt-grid-height;
       border-top: $dotted-line;
-
       @media (max-width: 999px) {
         border-top: none;
         height: auto;
       }
-
       .grid-time {
         font-size: $bfs /2;
-
         @media (max-width: 999px) {
           display: none;
         }
       }
     }
-
     .veranstaltung-wrap {
       float: left;
       width: 20%;
     }
-
     .veranstaltungen-wrap {
       position: absolute;
       top: 0;
       left: 30px;
-
       &:after {
         content: "";
         display: block;
         clear: both;
       }
     }
-
     .veranstaltung {
       width: 100%;
       background-color: #999;
-
       border-bottom: solid 1px rgba(255, 255, 255, 0.7);
       border-right: solid 1px rgba(255, 255, 255, 0.7);
       padding: $bfs /2;
-
       @media (max-width: 999px) {
         height: auto !important;
         padding-top: $bfs;
         padding-bottom: $bfs * 1.5;
       }
-
       .title,
       .subtitle {
         color: #fff;
@@ -188,35 +182,28 @@ $tt-grid-height: 60px;
         line-height: 110%;
         margin-bottom: $bfs/4;
       }
-
       .title+.subtitle {
         margin-top: $bfs * -0.8;
       }
-
       .title {
         font-weight: bold;
       }
-
-      &.training, &.projekt {
+      &.training,
+      &.projekt {
         background-color: $mi-lila;
       }
-
       &.workshop {
         background-color: $mi-gruen;
       }
-
       &.seminar {
         background-color: $mi-pink;
       }
-
       &.vortrag {
         background-color: $mi-pink;
       }
-
       &.feedback {
         background-color: $mi-blau;
       }
-
       &.orga {
         background-color: $mi-grau;
       }
@@ -226,36 +213,31 @@ $tt-grid-height: 60px;
 
 
 /**************/
+
+
 /* Veranstaltungsübersicht
 /**************/
 
 .is-tab-wrap {
   display: flex;
   flex-wrap: wrap;
-
   .card {
     display: flex;
     flex-direction: column;
-
     &.is-training .card-header {
       background-color: $mi-lila;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     & .card-content {
       flex-grow: 1;
-
       dl.overview-card {
-
         dd,
         dt {
           display: inline-block;
           float: none;
         }
-
         dd+dt:before {
           content: " // ";
           font-weight: 100;
@@ -263,65 +245,50 @@ $tt-grid-height: 60px;
         }
       }
     }
-
     &.is-workshop .card-header {
       background-color: $mi-gruen;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     &.is-vortrag .card-header {
       background-color: $mi-pink;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     &.is-feedback .card-header {
       background-color: $mi-blau;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     &.is-pruefung .card-header {
       background-color: $mi-black;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     &.is-projekt .card-header {
       background-color: $mi-lila;
-
       >.card-header-title {
         color: #fff;
       }
     }
-
     &.is-support-all .card-header {
       background-color: $mi-grau;
-
       >.card-header-title {
         color: #fff;
       }
     }
   }
-
   .is-tab-content {
     flex-basis: 30%;
     margin-right: 3%;
-
     @media (max-width: 999px) {
       flex-basis: 47%;
       margin-right: 3%;
     }
-
     @media (max-width: 768px) {
       flex-basis: 100%;
       margin-right: 0;
@@ -346,8 +313,13 @@ $tt-grid-height: 60px;
   padding-top: 1rem;
 }
 
+
 /**************/
+
+
 /* Content    */
+
+
 /**************/
 
 * {
@@ -359,12 +331,10 @@ $tt-grid-height: 60px;
   >li {
     display: inline-block;
     height: 100%;
-
     @media (max-width: 845px) {
       display: block;
       height: auto !important;
     }
-
     >a {
       height: 100%;
       vertical-align: middle;
@@ -390,60 +360,47 @@ $tt-grid-height: 60px;
 }
 
 .content {
-
   li {
     margin-left: 1em;
   }
-
   p,
   li,
   table {
     max-width: $bfs * 36;
   }
-
   h1 {
     font-size: $bfs * 1.6;
     font-weight: 500;
   }
-
   h2 {
     font-size: $bfs * 1.4;
     font-weight: 500;
   }
-
   h3 {
     font-size: $bfs;
     font-weight: 600;
   }
-
   h4 {
     font-size: $bfs;
     font-weight: 400;
     color: $mi-lila;
   }
-
   h5 {
     font-size: $bfs;
     font-weight: 400;
     color: $mi-lila;
   }
-
   h6 {
     font-size: $bfs;
     font-weight: 400;
     color: $mi-lila;
   }
-
   ul,
   ol {
     margin-left: 0;
   }
-
-
-
   dl {
     margin-bottom: $bfs;
-
     dt {
       display: block;
       float: left;
@@ -452,71 +409,57 @@ $tt-grid-height: 60px;
       font-weight: bold;
       color: $info;
     }
-
     dd {
       /*border-bottom: solid 1px $grey-light; */
       padding: $bfs /8 0;
       margin-left: 0;
     }
-
     dt::after {
       content: ":";
       display: inline-block;
       padding-right: $bfs /4;
     }
   }
-
   table {
-
     a,
     a:not(.button) {
       border: none;
     }
-
     th {
       font-weight: 600;
     }
-
     .no-border {
-
       th,
       td {
         border: none;
       }
     }
   }
-
   table {
     @extend .table;
   }
-
   table.tab-schwerpunktmodule {
     th {
       width: 40%;
     }
-
     th+th+th {
       width: 20%;
     }
   }
-
   .footnotes {
     border-top: solid 1px #9313ce;
     padding-bottom: $bfs;
     border-bottom: solid 1px #9313ce;
   }
-
   .img-responsive {
     width: 100%;
   }
-
   figure {
     padding: 0;
     margin: 0;
     border-top: dotted 1px $mi-gruen;
     padding-top: $bfs;
     margin-top: $bfs;
-
     figcaption {
       display: block;
       padding-bottom: $bfs /2;
@@ -528,25 +471,20 @@ $tt-grid-height: 60px;
       text-align: left;
     }
   }
-
   td.pm {
     background-color: $mi-blau;
   }
-
   td.spp {
     background-color: $mi-gruen;
   }
-
   td.spmw,
   td.spm {
     background-color: $mi-pink;
   }
-
   td.pm-grau,
   td.wpm {
     background-color: lighten($mi-black, 50%);
   }
-
   .lighten {
     * {
       color: #aaa;
@@ -559,21 +497,27 @@ $tt-grid-height: 60px;
     border-top: dotted 1px $grey-light;
     padding-top: $bfs;
   }
-
   .content {
+
+
     @media (min-width: 999px) {
+
+      .columns > .column:first-child {
+        padding-left: 0;
+      }
+      .columns > .column:last-child {
+        padding-right: 0;
+      }
 
       >* {
         margin-left: 50% !important;
       }
-
       h3 {
         font-size: $bfs;
         font-weight: 700;
         color: $mi-black;
         line-height: 130%;
       }
-
       &>h1,
       &>h2,
       &>h3 {
@@ -585,7 +529,6 @@ $tt-grid-height: 60px;
         text-align: right;
         hyphens: none;
       }
-
       &>h4,
       &>h5,
       &>h6 {
@@ -594,7 +537,6 @@ $tt-grid-height: 60px;
         margin-top: $bfs;
         margin-bottom: $bfs /2;
       }
-
       &>h1,
       &>h2 {
         /*border-top: dotted 1px #aaa; */
@@ -603,55 +545,42 @@ $tt-grid-height: 60px;
         padding-right: 10%;
         padding-left: 0;
       }
-
       &>h1+p,
       &>h2+p {
         margin-top: $bfs * 4 !important;
       }
-
       &>h2:not(:first-child) {
         margin-top: $bfs *3 !important;
       }
-
-
     }
   }
 }
 
 .news-box {
   margin-bottom: $bfs * 2;
-
   dl {
     margin-bottom: 0;
-
   }
-
   .card {
     transition: all 0.3s;
   }
-
   .card:hover {
     background-color: #000;
     color: #fff;
-
     h3 {
       color: #fff;
     }
   }
-
   .bm--card-equal-height {
     display: flex;
     flex-direction: column;
     height: 100%;
   }
-
   .bm--card-equal-height .card-footer {
     margin-top: auto;
   }
-
   figure {
     margin-top: 0;
-
     img {
       object-fit: cover;
     }
@@ -663,8 +592,7 @@ $tt-grid-height: 60px;
     border-top: dotted 1px $grey-light;
     padding-top: $bfs;
   }
-
-  .content {}
+  
 }
 
 .faq {
@@ -673,7 +601,6 @@ $tt-grid-height: 60px;
 
 .toc {
   border-left: solid 1px $mi-pink;
-
   .menu-list {
     padding-left: $bfs *2;
   }
@@ -696,21 +623,17 @@ $tt-grid-height: 60px;
   display: inline-block;
   margin-left: $bfs /2;
   transition: all 0.5s;
-
   &:hover {
     cursor: pointer;
   }
-
   &.active {
     transform: rotate(180deg);
   }
 }
 
 @media (max-width: 999px) {
-
   html,
   body {
-
     /*font-size: 60%;
 		line-height: 110%;*/
     .content {
@@ -718,29 +641,24 @@ $tt-grid-height: 60px;
         font-size: $bfs * 1.4;
         font-weight: 500;
       }
-
       h2 {
         font-size: $bfs * 1.2;
         font-weight: 500;
       }
-
       h3 {
         font-size: $bfs;
         font-weight: 700;
       }
-
       h4 {
         font-size: $bfs;
         color: $mi-lila;
         font-weight: 400;
       }
-
       h5 {
         font-size: $bfs;
         font-weight: 400;
         color: $mi-lila;
       }
-
       h6 {
         font-size: $bfs;
         font-weight: 400;
@@ -751,7 +669,6 @@ $tt-grid-height: 60px;
 }
 
 @media print {
-
   section.hero,
   .is-non-print {
     display: none;
@@ -768,7 +685,6 @@ $tt-grid-height: 60px;
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 //@import "highlights";
 @import "svg-icons";
-
 .highlight {
   background-color: $mi-pink;
   color: #fff;
@@ -819,8 +735,47 @@ pre code {
   position: absolute;
 }
 
-.clipped-text{
+.clipped-text {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+[data-href]{
+  cursor: pointer;
+}
+
+.with-space-s{
+  margin-bottom: $bfs;
+}
+
+.with-space-m{
+  margin-bottom: $bfs * 2;
+}
+
+.image.is-square img, .image.is-1by1 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-16by9 img, .image.is-2by1 img{
+  object-fit: cover;
+}
+
+.title.is-inverted{
+  background-color: #000;
+  color: #fff;
+  display: inline-flex;
+  padding: $bfs/2 $bfs/2;
+  margin-bottom: 0;
+}
+
+.subtitle.is-inverted{
+  background-color: $mi-grau;
+  display: table-cell;
+  padding: $bfs/4 $bfs/2;
+}
+
+.is-marginalia{
+  opacity: 0.6;
+  transition: opacity 0.2s;
+
+  &:hover{
+    opacity: 1;
+  }
 }
