--- a/assets/styles/mi-master-wtw.scss
+++ b/assets/styles/mi-master-wtw.scss
@@ -766,7 +766,7 @@ pre code {
 }
 
 .subtitle.is-inverted{
-  background-color: $mi-grau;
+  background-color: $mi-lila;
   display: table-cell;
   padding: $bfs/4 $bfs/2;
 }
