Marginalie etwas ausgearbeitet

--- a/assets/styles/mi-master-wtw.scss
+++ b/assets/styles/mi-master-wtw.scss
@@ -772,6 +772,8 @@ pre code {
 }
 
 .is-marginalia{
+  border-left: solid 1px $mi-blau;
+  padding-left: $bfs;
   opacity: 0.6;
   transition: opacity 0.2s;
 
