Font tweak for code

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,6 +10,7 @@ $mi-black: #231f20;
 $mi-grau: #aaaaaa;
 $mi-bg: #efefef;
 $family-primary: "PT Sans";
+$family-code: "Courier New", Courier, monospace;
 $primary: $mi-pink;
 $info: $mi-lila;
 $success: $mi-gruen;
