--- a/_sass/sass/utilities/variables.sass
+++ b/_sass/sass/utilities/variables.sass
@@ -106,7 +106,7 @@ $border: $grey-lighter !default
 $border-hover: $grey-light !default
 
 // Text colors
-$text: $grey-dark !default
+$text: $grey-darker !default
 $text-invert: findColorInvert($text) !default
 $text-light: $grey !default
 $text-strong: $grey-darker !default
