Added printable Version of workshops

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,6 +11,7 @@ $mi-grau: #aaaaaa;
 $mi-bg: #efefef;
 $family-primary: "PT Sans";
 $family-code: "Courier New", Courier, monospace;
+$family-headlines: "Roboto Slab";
 $primary: $mi-pink;
 $info: $mi-lila;
 $success: $mi-gruen;
